--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/firebase": "^7.5.0",
     "core-js": "^3.9.1",
     "firebase": "^8.6.1",
+    "firebase-tools": "^9.11.0",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
