Delete vuetify and install composition-api

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/composition-api": "^0.24.4",
     "@nuxtjs/firebase": "^7.5.0",
+    "@vue/composition-api": "^1.0.0-rc.12",
     "core-js": "^3.9.1",
-    "firebase": "^8.6.1",
+    "firebase": "^8.6.8",
     "firebase-tools": "^9.11.0",
     "nuxt": "^2.15.3"
   },
